# portfolio

./: .gitignore  README.md  data.db  pyproject.toml
_corpus/: README.md
docs/: product-spec.md  reference-analysis.md  repo-structure-proposal.md  technical-spec.md
docs/sprints/: sprint-01-foundation.md  sprint-02-core-services.md  sprint-02-pipeline.md  sprint-03-ai-and-worker.md  sprint-03-simulation.md  sprint-04-analysis.md  sprint-04-integration-and-hardening.md  sprint-05-integration.md
infra/: docker-compose.yml
infra/env/: ai-service.env  analysis-service.env  api-gateway.env  data-processing-service.env  data-service.env  simulation-service.env  worker-service.env  worker.env
portfolio-site/: README.md  package-lock.json  package.json
portfolio-site/docs/: reference-notes.md  site-brief.md
portfolio-site/scripts/: generate-portfolio-images.mjs
portfolio-site/src/app/: globals.css  layout.tsx  page.tsx
portfolio-site/src/components/: focus-strip.tsx  project-card.tsx  section-heading.tsx  slide-progress.tsx
portfolio-site/src/content/: site.ts
services/analysis-service/: Dockerfile
services/analysis-service/app/: main.py
services/api-gateway/: Dockerfile
services/api-gateway/app/: main.py
services/data-processing-service/: Dockerfile  data.db
services/simulation-service/: Dockerfile
services/worker/: Dockerfile
shared/observability/: logger.py  tracing.py
shared/schemas/: envelope.py  errors.py
tests/helpers/: service_loader.py
tests/integration/: test_async_flow.py  test_sync_flow.py
tests/smoke/: test_health.py
(+52 files in other folders)
